# freerun

./: .gitattributes  .gitignore  AUTORUN_SERVER_GUIDE.md  README.md  UPDATE_GUIDE.md  package.json
app/: .env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
app/functions/devproxy/: [[path]].js
app/src/: App.vue  main.js  style.css
app/src/components/: AutoConfig.vue  Club.vue  ClubAutoConfig.vue  MapPreview.vue  RunRecords.vue  SponsorCard.vue  SubmitRun.vue
app/src/composables/: useDataStore.js  useRun.js  useStickerCache.js  useTheme.js
app/src/router/: index.js
app/src/utils/: appTarget-core.js  appTarget.js  club.js  map.js  run.js  viewport.js
app/src/views/: AuthPage.vue  HomePage.vue  MyPage.vue  (+1 more)
app/test/: app-target.test.mjs  auth-page.test.mjs  autorun-config.test.mjs  branding-entry.test.mjs  club-utils.test.mjs  desktop-package.test.mjs  submit-run-layout.test.mjs
autorun-local/: .env.example  club.js  ecosystem.config.js  package-lock.json  package.json  run-core.js  server.js  token-store.js
autorun-local/maps/: cuit_hkg2.json
autorun-local/test/: club.test.js  run-core.test.js  token-store.test.js
desktop/: Cargo.toml  build.rs
desktop/assets/: app-icon-64.rgba
desktop/scripts/: build.mjs
desktop/src/: lib.rs  main.rs
desktop/tests/: server_helpers.rs
lib/: proxy-policy.js
local-proxy/: .env.example  package.json  server.js
server/: .env.example  index.js  package-lock.json  package.json
server/test/: proxy-policy.test.js
worker/: index.js  wrangler.toml
(+11 files in other folders)
