[package]
name = "freerun-desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
include_dir = "0.7.4"
percent-encoding = "2.3.2"
tao = "0.35.2"
tiny_http = "0.12.0"
ureq = { version = "3.3.0", features = ["rustls"] }
wry = "0.55.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
winresource = "0.1.31"

[lib]
name = "freerun_desktop"
path = "src/lib.rs"

[[bin]]
name = "Freerun"
path = "src/main.rs"
